--- a/index.html
+++ b/index.html
@@ -4,11 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Sheila</title>
+    <title>piuuSheila</title>
+
+
+    <!-- ini CSS internal -->>
+     <style>
+        p {
+            background-color: aquamarine;
+        } 
+     </style>
+
+     <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
+    <!-- ini CSS inline-->
+    <header style="background-color: brown;">
+        <h1>Sheila</h1>
+    </header>
 
-</body>
+    <p>bjhbhhhhhhhhhhhhhhhhhhhjjjjjjjjjjj</p>
+
+    <span> Made by Shei</span>
+
+<button onclick="clickHere()">Click here</button>
+<script>
+    function clickHere(){
+        alert('Selamat anda sukses!')
+    }
+</script>
+
+</body> 
 
 </html>
